[package]
name = "kps-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kps"
path = "src/kps/main.rs"

[[bin]]
name = "excite"
path = "src/excite/main.rs"

[dependencies]
rand = "0.8.5"
crossbeam = "0.8.2"
jack = "0.11.3"
egui = "0.20.1"
eframe = { version = "0.20.1", features = ["persistence"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"